<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/favouriteRecipeFragment"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/nav_favourite" />
    <item
        android:id="@+id/addRecipeFragment"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_add_recipe" />
    <item
        android:id="@+id/shoppingListFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_shopping" />
    <item
        android:id="@+id/recipePersonFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
