<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_surface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/layout_toolbar" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_recipe_name" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRecipeTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_recipe_time" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRecipeSteps"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="top"
                android:hint="@string/hint_recipe_steps" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAddedIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />
        <Button
            android:id="@+id/btnAddIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_add" />
        <Button
            android:id="@+id/btnSaveRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/action_add" />
    </LinearLayout>
</ScrollView>
